--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       WORDPRESS_DB_NAME: wp_database
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: password
+      WORDPRESS_DEBUG: 1
     volumes:
       - ./wordpress:/var/www/html
 
